CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20

	- The fax support did not update/set the job-hold-until
	  attribute when a fax job fails (STR #269)
	- The cupsLangGet() function didn't support locales of
	  the form "ll.charset" (STR #271)
	- The scheduler did not use the charset when getting the
	  language localization for a request; this caused extra
	  disk IO for every request (STR #271)
	- The scheduler did not support requests with more than
	  one language specified (STR #267)


CHANGES IN CUPS V1.1.20rc1

	- The scheduler now waits up to 60 seconds before
	  restarting to allow active jobs to complete printing
	  and pending requests to be processed (STR #226)
	- The web interface did not work on systems where time_t
	  is 64 bits (STR #262)
	- Added backend tweeks and content-length check from Red
	  Hat (STR #253)
	- The USB backend now uses the 8255 constants instead of
	  the standard constants when reporting printer status
	  bits on Linux (STR #254)
	- Added new cupsDoAuthentication(), cupsGetFd(),
	  cupsGetFile(), cupsPutFd(), and cupsPutFile() functions
	  to the CUPS API (STR #112)
	- The PDF filter always scaled and offset pages; this
	  caused problems under MacOS X, so now the "fitplot"
	  option controls whether PDF files are scaled to fit
	  within the printable area of the page (STR #250)
	- The LPD backend did not support the port number in a
	  URI (STR #247)
	- Some filters didn't properly support boolean options
	  (STR #249)
	- Landscape PDF files were not always offset by the
	  correct amount when rotating (STR #243)
	- The scheduler could hang in a call to localtime() when
	  logging messages from the signal handler (STR #242)
	- The PDF filter no longer prints form widgets; this
	  duplicates the behavior of Acrobat Reader (STR #241)
	- cupsGetPPD() didn't handle a late termination of a
	  HTTP connection with the server (STR #220)
	- ppdOpen() did not correctly check for "*PPD-Adobe-4."